--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,6 +21,15 @@ FOLLOWING REFER TO ALL THE IDS
 	position: absolute;
 }
 
+#icon {
+	width: 30px;
+	height: auto;
+	position: fixed;
+	top: 10px;
+	left: 20px;
+	/*z-index: 1000;*/
+}
+
 /*contains all the content on page; centers it on screen*/
 #container {
 	height: auto;
